# imgproc

./: imgproc.c  imgproc.h  main.c
app/: CMakeLists.txt  com.sh  mseg.cpp  net.cpp  net.h
app/src/main/cpp/: segment.cpp
beauty/: filter.h
camera/: camera_record.cc
jni/: Android.mk  mnnenc.mk
jni/include/MNN/: VCS.h
koutu/: filter.h  image_process.cc  image_process.h  net.cpp  net.h
model/: deeplabv3.mnn
opengl/: blend.h  filter.h  filter.h.bak  filter.h.bak.ok0712  filter.h.koutu.ok  image_process.cc  image_process.koutu.ok.0721  main.cc
sdk0902/cpp/: CMakeLists.txt  filter.h  frame_buffer.cc  frame_buffer.h  image_process.cc  image_process.h  net.cpp  net.h  opengl.cc  pabeauty_jni.cpp
sdk0902/src/main/java/: PARenderer.java
